# Test_1

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: main.cpp
src/HelloSquare/: main.cpp
